# screenshot-manager

./: .gitattributes  .gitignore  CLAUDE.md  CODE_SIGNING_SETUP.md  README.md  package-lock.json  package.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: build-mac.yml  ci.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/__tests__/: App.test.tsx
src/test/: setup.ts
