[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
trash = "5"
walkdir = "2"
time = { version = "0.3", features = ["formatting"] }
anyhow = "1"
dirs = "5"
cfg-if = "1"
once_cell = "1"
parking_lot = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_repr = "0.1"
thiserror = "1"
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSAutoreleasePool", "NSError", "NSFileManager", "NSString", "NSURL"] }
